--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <!-- Basic Page Needs–– -->
   <meta charset="utf-8"> 
 
-  <title>Your Website Title</title>
+  <title>Koutsari Elena</title>
 
   <!-- Mobile Specific Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -28,8 +28,8 @@
     </div>
 
     <div id="student_info" class="row half-bottom" >
-      <h3>Dimitris Papanikolaou</h3>
-      <p>I am a 1st year undergrad student at NTUA School of Architecture. This is my website for ARCH 4342 Computational Methods in Creative Arts and Sciences. I like to do X, Y, Z. Have a look at my projects. </p>
+      <h3>Koutsari Elena</h3>
+      <p>I am a 1st year undergrad student at NTUA School of Architecture. This is my website for ARCH 4342 Computational Methods in Creative Arts and Sciences. Some of my interests include : modeling existing buildings, applying the logical structure of math to solve real-world problems, human psycology/morality   . Have a look at my projects. </p>
     </div>
 
   </div>
@@ -42,12 +42,12 @@
 
     <div class="row half-bottom">
       <div class="four columns">
-        <img src="images/blue.png" class ="scale-with-grid">
-        <h5>Blue Project</h5>
+        <img src="images/solitaire.png" class ="scale-with-grid">
+        <h5>In-law Solitaire</h5>
       </div>
       <div class="four columns">
-        <img src="images/pink.png" class ="scale-with-grid">
-        <h5>Pink Project</h5>
+        <img src="images/lines.png" class ="scale-with-grid">
+        <h5>Generative Strokes</h5>
       </div>
       <div class="four columns">
         <img src="images/yellow.png" class ="scale-with-grid">
