--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <div id="student_info" class="row half-bottom" >
       <h3>Koutsari Elena</h3>
-      <p>I am a 1st year undergrad student at NTUA School of Architecture. This is my website for ARCH 4342 Computational Methods in Creative Arts and Sciences. Some of my interests include : modeling existing buildings, applying the logical structure of math to solve real-world problems, human psycology/morality   . Have a look at my projects. </p>
+      <p>I am a 1st year undergrad student at NTUA School of Architecture. This is my website for ARCH 4342 Computational Methods in Creative Arts and Sciences. Some of my interests include : modeling buildings, applying the logical structure of math to solve real-world problems, human psycology/morality   . Have a look at my projects! </p>
     </div>
 
   </div>
@@ -42,7 +42,7 @@
 
     <div class="row half-bottom">
       <div class="four columns">
-        <img src="images/solitaire.png" class ="scale-with-grid">
+        <img src="images/solitaire" class ="scale-with-grid">
         <h5>In-law Solitaire</h5>
       </div>
       <div class="four columns">
@@ -72,7 +72,7 @@
 
 
     <div class="row one-bottom center">
-      <p>©Dimitris Papanikolaou 2025</p>
+      <p>©Elena Koutsari 2025</p>
     </div>
 
 
