--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <div class="row half-bottom">
       <div class="four columns">
-        <img src="images/solitaire" class ="scale-with-grid">
+        <img src="images/solitaire.png" class ="scale-with-grid">
         <h5>In-law Solitaire</h5>
       </div>
       <div class="four columns">
