--- a/index.html
+++ b/index.html
@@ -51,19 +51,19 @@
         <h5>Generative Strokes</h5>
       </div>
       <div class="four columns">
-        <img src="images/yellow.png" class ="scale-with-grid">
-        <h5>Yellow Project</h5>
+        <img src="images/Bubble.png" class ="scale-with-grid">
+        <h5>Bubble Mess</h5>
       </div>
     </div>
 
     <div class="row one-bottom">
       <div class="four columns">
-        <img src="images/red.png" class ="scale-with-grid">
-        <h5>Red Project</h5>
+        <img src="images/rect.png" class ="scale-with-grid">
+        <h5>Sol LeWitt Rectangle</h5>
       </div>
       <div class="four columns">
-        <img src="images/brown.png" class ="scale-with-grid">
-        <h5>Brown Project</h5>
+        <img src="images/sqaure.png" class ="scale-with-grid">
+        <h5>Film Noir</h5>
       </div>
       <div class="four columns">
         <img src="images/green.png" class ="scale-with-grid">
