--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <h5>Sol LeWitt Rectangle</h5>
       </div>
       <div class="four columns">
-        <img src="images/sqaure.png" class ="scale-with-grid">
+        <img src="images/square.png" class ="scale-with-grid">
         <h5>Film Noir</h5>
       </div>
       <div class="four columns">
