--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
     <div class="row half-bottom">
       <div class="four columns">
         <img src="images/solitaire.png" class ="scale-with-grid">
-        <h5>In-law Solitaire</h5>
+        <h5>In-law Solitaire
+            Learn more about thee game here</h5>
       </div>
       <div class="four columns">
         <img src="images/lines.png" class ="scale-with-grid">
