--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="row half-bottom">
       <div class="four columns">
         <img src="images/solitaire.png" class ="scale-with-grid">
-        <h5>In-law Solitaire </h5>h5>
+        <h5>In-law Solitaire </h5>
            <h5> Learn more about the game here</h5>
       </div>
       <div class="four columns">
