--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <div class="four columns">
         <img src="images/solitaire.png" class ="scale-with-grid">
         <h5>In-law Solitaire </h5>
-        <h6>Learn more about the game <a href="files/inlawsolitaire.pdf" target="_blank" style="color: blue; text-decoration: underline;">here</a></h6>
+        <h6>Learn more about the game <a href="images/inlawsolitaire.pdf" target="_blank" style="color: blue; text-decoration: underline;">here</a></h6>
 
       </div>
       <div class="four columns">
