--- a/index.html
+++ b/index.html
@@ -58,30 +58,29 @@
       </div>
     </div>
 
-    <div class="row one-bottom">
-      <div class="four columns">
-        <img src="images/rect.png" class ="scale-with-grid">
-        <h5>Sol LeWitt Rectangle</h5>
- <div class="four columns">
-  <img src="images/square.png" class="scale-with-grid">
-  <h5><a href="https://editor.p5js.org/elenakoutsari/full/nXJxmNVdS" target="_blank" style="color: inherit; text-decoration: none;">Film Noir</a></h5>
-         </div>
-        
-      <div class="four columns">
-        <img src="images/green.png" class ="scale-with-grid">
-        <h5>Green Project</h5>
-      </div>
-    </div>
-
-
-    <div class="row one-bottom center">
-      <p>©Elena Koutsari 2025</p>
-    </div>
-
-
-
+   <div class="row one-bottom">
+  <div class="four columns">
+    <img src="images/rect.png" class="scale-with-grid">
+    <h5>Sol LeWitt Rectangle</h5>
   </div>
 
+  <div class="four columns">
+    <img src="images/square.png" class="scale-with-grid">
+    <h5>
+      <a href="https://editor.p5js.org/elenakoutsari/full/nXJxmNVdS" target="_blank" style="color: inherit; text-decoration: none;">
+        Film Noir
+      </a>
+    </h5>
+  </div>
 
-</body>
+  <div class="four columns">
+    <img src="images/green.png" class="scale-with-grid">
+    <h5>Green Project</h5>
+  </div>
+</div>
+
+<div class="row one-bottom center">
+  <p>©Elena Koutsari 2025</p>
+</div>
+
 </html>
