--- a/index.html
+++ b/index.html
@@ -61,9 +61,7 @@
    <div class="row one-bottom">
   <div class="four columns">
     <img src="images/rect.png" class="scale-with-grid">
-    <h5>Sol LeWitt Rectangle</h5>
-  </div>
-
+    <h5>Sol LeWitt Rectangle</h5>  </div>
   <div class="four columns">
     <img src="images/square.png" class="scale-with-grid">
     <h5>
