--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
       </div>
       <div class="four columns">
         <img src="images/Bubble.png" class ="scale-with-grid">
-        <h5>Bubble Mess</h5>
+        <h5> <a href="https://editor.p5js.org/elenakoutsari/full/YbLdETswg" target="_blank" style="color: inherit; text-decoration: none;"> Bubble Mess 
+        </a> 
+        </h5>
       </div>
     </div>
 
