--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
       </div>
       <div class="four columns">
         <img src="images/lines.png" class ="scale-with-grid">
-        <h5>Generative Strokes</h5>
+        <h5> <a href="https://editor.p5js.org/elenakoutsari/full/IRVShp7Q8" target="_blank" style="color: inherit; text-decoration: none;"> Generative Strokes
+         </a>
+        </h5>
       </div>
       <div class="four columns">
         <img src="images/Bubble.png" class ="scale-with-grid">
@@ -63,7 +65,9 @@
    <div class="row one-bottom">
   <div class="four columns">
     <img src="images/rect.png" class="scale-with-grid">
-    <h5>Sol LeWitt Rectangle</h5>  </div>
+    <h5> <a href= "https://editor.p5js.org/elenakoutsari/full/Dp5C9QEyK" target="_blank" style="color: inherit; text-decoration: none;"> 
+      Sol LeWitt Rectangle
+    </a> </h5>  </div>
   <div class="four columns">
     <img src="images/square.png" class="scale-with-grid">
     <h5>
