--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@
     <img src="images/rect.png" class="scale-with-grid">
     <h5> <a href= "https://editor.p5js.org/elenakoutsari/full/Dp5C9QEyK" target="_blank" style="color: inherit; text-decoration: none;"> 
       Sol LeWitt Rectangle
-    </a> </h5>  </div>
+    </a> 
+    </h5>  
+  </div>
   <div class="four columns">
     <img src="images/square.png" class="scale-with-grid">
     <h5>
