--- a/index.html
+++ b/index.html
@@ -20,6 +20,60 @@
 
 
 </head>
+  <style>
+    body {
+      background-color: #94618E; /* Grape */
+      font-family: 'Fredoka', sans-serif;
+      color: #F8EEE7; /* Shell for general text */
+      margin: 0;
+      padding: 0;
+    }
+
+    .row {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      margin: 20px;
+    }
+
+    .four.columns {
+      flex: 0 0 30%;
+      margin: 10px;
+      text-align: center;
+    }
+
+    .scale-with-grid {
+      max-width: 100%;
+      height: auto;
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+    }
+
+    h5 {
+      color: #F4DECB; /* Sand for titles */
+      font-weight: 700;
+      font-size: 1.4rem;
+      margin-top: 10px;
+    }
+
+    a {
+      color: inherit;
+      text-decoration: none;
+    }
+
+    .center {
+      text-align: center;
+    }
+
+    .one-bottom {
+      margin-bottom: 40px;
+    }
+
+    p {
+      color: #F8EEE7; /* Shell for footer text */
+      font-size: 1rem;
+    }
+  </style>
 <body>
 
   <div id="info" class="container" >
