--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
   <div class="four columns">
     <img src="images/green.png" class="scale-with-grid">
-    <h5>Green Project</h5>
+    <h5> Coming Soon </h5>
   </div>
 </div>
 
