--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
     }
 
     p {
-      color: #F8EEE7; /* Shell for footer text */
-      font-size: 1rem;
+      color: #F8EEE7; /Shell
+      font-size: 3rem;
     }
   </style>
 <body>
