--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       </div>
       <div class="four columns">
         <img src="images/Bubble.png" class ="scale-with-grid">
-        <h5> <a href="https://editor.p5js.org/elenakoutsari/full/YbLdETswg" target="_blank" style="color: inherit; text-decoration: none;"> Bubble Mess 
+        <h5> <a href="https://editor.p5js.org/elenakoutsari/full/YbLdETswg" target="_blank" style="color: inherit; text-decoration: none;"> Bubble Trouble 
         </a> 
         </h5>
       </div>
