--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
   </div>
 
   <div class="four columns">
-    <img src="images/green.png" class="scale-with-grid">
-    <h5> Coming Soon </h5>
+    <img src="images/OceanFloorTiles.png" class="scale-with-grid">
+    <h5> Ocean Floor Tiles </h5>
   </div>
 </div>
 
