--- a/index.html
+++ b/index.html
@@ -135,7 +135,10 @@
 
   <div class="four columns">
     <img src="images/OceanFloorTiles.png" class="scale-with-grid">
-    <h5> Ocean Floor Tiles </h5>
+    <h5> <a href="https://editor.p5js.org/elenakoutsari/full/sVRnJNmPy" target="_blank" style="color: inherit; text-decoration: none;">
+        Ocean Floor Tiles 
+      </a>
+    </h5>
   </div>
 </div>
 
