--- a/index.html
+++ b/index.html
@@ -140,6 +140,14 @@
       </a>
     </h5>
   </div>
+
+      <div class="four columns">
+    <img src="images/Dalmation puppies.png" class="scale-with-grid">
+    <h5> <a href="https://editor.p5js.org/elenakoutsari/full/vOPwPC7US" target="_blank" style="color: inherit; text-decoration: none;">
+        Dalmation puppies 
+      </a>
+    </h5>
+  </div>
 </div>
 
 <div class="row one-bottom center">
