--- a/index.html
+++ b/index.html
@@ -148,6 +148,16 @@
       </a>
     </h5>
   </div>
+
+     <div class="four columns">
+    <img src="images/Space Shooters.png" class="scale-with-grid">
+    <h5> Space Shooters</h5>
+      <h6> To play the game click <a href="https://editor.p5js.org/elenakoutsari/full/2seBPlD0E" target="_blank" style="color: inherit; text-decoration: none;">
+        here 
+      </h6>
+      </a>
+    
+  </div>
 </div>
 
 <div class="row one-bottom center">
