--- a/index.html
+++ b/index.html
@@ -18,8 +18,6 @@
   <link rel="stylesheet" href="css/skeleton.css">
   <link rel="stylesheet" href="css/customize.css">
 
-
-</head>
   <style>
     body {
       background-color: #94618E; /* Grape */
@@ -70,10 +68,12 @@
     }
 
     p {
-      color: #F8EEE7; /Shell
+      color: #F8EEE7; /* Shell */
       font-size: 5rem;
     }
   </style>
+</head>
+
 <body>
 
   <div id="info" class="container" >
@@ -84,12 +84,10 @@
 
     <div id="student_info" class="row half-bottom" >
       <h3>Koutsari Elena</h3>
-      <p>I am a 1st year undergrad student at NTUA School of Architecture. This is my website for ARCH 4342 Computational Methods in Creative Arts and Sciences. Some of my interests include : modeling buildings, applying the logical structure of math to solve real-world problems, human psycology/morality   . Have a look at my projects! </p>
+      <p>I am a 1st year undergrad student at NTUA School of Architecture. This is my website for ARCH 4342 Computational Methods in Creative Arts and Sciences. Some of my interests include : modeling buildings, applying the logical structure of math to solve real-world problems, human psycology/morality. Have a look at my projects!</p>
     </div>
 
   </div>
-
-
 
   <div id="projects" class="container" >
 
@@ -100,68 +98,84 @@
         <img src="images/solitaire.png" class ="scale-with-grid">
         <h5>In-law Solitaire </h5>
         <h6>Learn more about the game <a href="images/inlawsolitaire.pdf" target="_blank" style="color: blue; text-decoration: underline;">here</a></h6>
-
       </div>
       <div class="four columns">
         <img src="images/lines.png" class ="scale-with-grid">
-        <h5> <a href="https://editor.p5js.org/elenakoutsari/full/IRVShp7Q8" target="_blank" style="color: inherit; text-decoration: none;"> Generative Strokes
-         </a>
+        <h5> 
+          <a href="https://editor.p5js.org/elenakoutsari/full/IRVShp7Q8" target="_blank" style="color: inherit; text-decoration: none;"> 
+            Generative Strokes
+          </a>
         </h5>
       </div>
       <div class="four columns">
         <img src="images/Bubble.png" class ="scale-with-grid">
-        <h5> <a href="https://editor.p5js.org/elenakoutsari/full/YbLdETswg" target="_blank" style="color: inherit; text-decoration: none;"> Bubble Trouble 
-        </a> 
+        <h5> 
+          <a href="https://editor.p5js.org/elenakoutsari/full/YbLdETswg" target="_blank" style="color: inherit; text-decoration: none;"> 
+            Bubble Trouble 
+          </a> 
         </h5>
       </div>
     </div>
 
-   <div class="row one-bottom">
-  <div class="four columns">
-    <img src="images/rect.png" class="scale-with-grid">
-    <h5> <a href= "https://editor.p5js.org/elenakoutsari/full/Dp5C9QEyK" target="_blank" style="color: inherit; text-decoration: none;"> 
-      Sol LeWitt Rectangle
-    </a> 
-    </h5>  
-  </div>
-  <div class="four columns">
-    <img src="images/square.png" class="scale-with-grid">
-    <h5>
-      <a href="https://editor.p5js.org/elenakoutsari/full/nXJxmNVdS" target="_blank" style="color: inherit; text-decoration: none;">
-        Film Noir
-      </a>
-    </h5> 
-  </div>
-
-  <div class="four columns">
-    <img src="images/OceanFloorTiles.png" class="scale-with-grid">
-    <h5> <a href="https://editor.p5js.org/elenakoutsari/full/sVRnJNmPy" target="_blank" style="color: inherit; text-decoration: none;">
-        Ocean Floor Tiles 
-      </a>
-    </h5>
-  </div>
+    <div class="row one-bottom">
+      <div class="four columns">
+        <img src="images/rect.png" class="scale-with-grid">
+        <h5> 
+          <a href= "https://editor.p5js.org/elenakoutsari/full/Dp5C9QEyK" target="_blank" style="color: inherit; text-decoration: none;"> 
+            Sol LeWitt Rectangle
+          </a> 
+        </h5>  
+      </div>
+      <div class="four columns">
+        <img src="images/square.png" class="scale-with-grid">
+        <h5>
+          <a href="https://editor.p5js.org/elenakoutsari/full/nXJxmNVdS" target="_blank" style="color: inherit; text-decoration: none;">
+            Film Noir
+          </a>
+        </h5> 
+      </div>
+      <div class="four columns">
+        <img src="images/OceanFloorTiles.png" class="scale-with-grid">
+        <h5> 
+          <a href="https://editor.p5js.org/elenakoutsari/full/sVRnJNmPy" target="_blank" style="color: inherit; text-decoration: none;">
+            Ocean Floor Tiles 
+          </a>
+        </h5>
+      </div>
+      <div class="four columns">
+        <img src="images/Dalmation puppies.png" class="scale-with-grid">
+        <h5> 
+          <a href="https://editor.p5js.org/elenakoutsari/full/vOPwPC7US" target="_blank" style="color: inherit; text-decoration: none;">
+            Dalmation puppies 
+          </a>
+        </h5>
+      </div>
+      <div class="four columns">
+        <img src="images/Space Shooters.png" class="scale-with-grid">
+        <h5> Space Shooters</h5>
+        <h6> To play the game click 
+          <a href="https://editor.p5js.org/elenakoutsari/full/2seBPlD0E" target="_blank" style="color: inherit; text-decoration: none;">
+            here 
+          </a>
+        </h6>
+      </div>
 
       <div class="four columns">
-    <img src="images/Dalmation puppies.png" class="scale-with-grid">
-    <h5> <a href="https://editor.p5js.org/elenakoutsari/full/vOPwPC7US" target="_blank" style="color: inherit; text-decoration: none;">
-        Dalmation puppies 
-      </a>
-    </h5>
+        <img src="images/Final.png" class="scale-with-grid">
+        <h5>
+          <a href="https://docs.google.com/presentation/d/1KD5cULqs6sV2BdDDFtk3VvBq5l1z6RdG/edit?usp=drive_link&ouid=107257533488135711106&rtpof=true&sd=true" 
+             target="_blank" 
+             style="color: inherit; text-decoration: none;">
+            Final Project: Safety Maps
+          </a>
+        </h5>
+      </div>
+    </div>
   </div>
 
-     <div class="four columns">
-    <img src="images/Space Shooters.png" class="scale-with-grid">
-    <h5> Space Shooters</h5>
-      <h6> To play the game click <a href="https://editor.p5js.org/elenakoutsari/full/2seBPlD0E" target="_blank" style="color: inherit; text-decoration: none;">
-        here 
-      </h6>
-      </a>
-    
+  <div class="row one-bottom center">
+    <p> ©Elena Koutsari 2025 </p>
   </div>
-</div>
 
-<div class="row one-bottom center">
-  <p> ©Elena Koutsari 2025 </p>
-</div>
-
+</body>
 </html>
