--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
   </div>
      
   <div class="four columns">
-    <img src="images/safety_map.png" class="scale-with-grid">
+    <img src="images/Final.png" class="scale-with-grid">
     <h5>
       <a href="https://docs.google.com/presentation/d/1KD5cULqs6sV2BdDDFtk3VvBq5l1z6RdG/edit?usp=drive_link&ouid=107257533488135711106&rtpof=true&sd=true" 
          target="_blank" 
