--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
   <div class="four columns">
     <img src="images/Final.png" class="scale-with-grid">
     <h5>
-      <a href="https://docs.google.com/presentation/d/1KD5cULqs6sV2BdDDFtk3VvBq5l1z6RdG/edit?usp=drive_link&ouid=107257533488135711106&rtpof=true&sd=true" 
+      <a href="https://elenakoutsari.github.io/Sense-of-insecurity-in-the-architectural-environment/" 
          target="_blank" 
          style="color: inherit; text-decoration: none;">
         Final Project: Safety Maps
